tests/src/Loader/classloader/generics/Instantiation/Negative/abstract10.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract10_abstract10_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract10_abstract10_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract10\\abstract10.cmd");
        }
    }
}
